Package title and description.

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/egrueebler/fca/branch/feature/package-structure/graph/badge.svg)](https://codecov.io/gh/egrueebler/fca?branch=feature/package-structure)
 <!-- badges: end -->
 
-The goal of fca is to ...
+Floating Catchment Area (FCA) methods to calculate spatial accessibility.
 
 ## Installation
 
