--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Floating Catchment Area (FCA) Methods to Calculate Spatial Accessibility
+# Floating Catchment Area (FCA) Methods
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/egrueebler/fca/workflows/R-CMD-check/badge.svg)](https://github.com/egrueebler/fca/actions)
 [![Codecov test coverage](https://codecov.io/gh/egrueebler/fca/branch/feature/package-structure/graph/badge.svg)](https://codecov.io/gh/egrueebler/fca?branch=feature/package-structure)
 <!-- badges: end -->
+
+Floating Catchment Area (FCA) methods to Calculate Spatial Accessibility.
 
 **Text from DESCRIPTION**
 
@@ -45,18 +47,8 @@ library(fca)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+## References
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+* [PaperA](doi)
+* [PaperB](doi)
+* [PaperC](doi)
