--- a/README.Rmd
+++ b/README.Rmd
@@ -45,10 +45,54 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(fca)
 ## basic example code
+
+p <- data.frame(
+  Origin_ID = letters[1:10],
+  size = c(100, 200, 50, 100, 500, 50, 100, 100, 50, 500)
+) # population df with column for size
+
+s <- data.frame(
+  Destination_ID = as.character(1:3),
+  capacity = c(1000, 200, 500)
+) # supply df with column for capacity
+
+D <- matrix(runif(30, min=0, max=30), ncol = 10, nrow = 3, byrow=TRUE, dimnames = list(c(1:3), c(letters[1:10]))) # distance matrix with travel times from 0 to 30
+
+print(D)
+
+D <- distance_weights(D, d_max=20, imp_function="gaussian", function_d_max = 0.01) # normalize distance matrix with gaussian function and threshold of 20 minutes (to compute beta for function)
+
+# Preprocessing Data for FCA method: match IDs of matrix with demand and supply data
+m_originid <- unique(colnames(D))
+m_originid <- as.data.frame(m_originid)
+p1 <- left_join(m_originid, p, by = c("m_originid" = "Origin_ID"))
+p1 <- p1[order(p1$m_originid),] # sort ascending for calculations
+p <- p1 %>% 
+  select(size) %>% 
+  unlist(use.names = FALSE) # select demand variable
+names(p) <- p1 %>%
+  select(m_originid) %>%
+  unlist(use.names = FALSE)
+
+m_destinationid <- unique(rownames(D))
+m_destinationid <- as.data.frame(m_destinationid)
+s1 <- left_join(m_destinationid, s, by = c("m_destinationid" = "Destination_ID"))
+s1 <- s1[order(s1$m_destinationid),] # sort ascending for calculations
+s <- s1 %>% 
+  select(capacity) %>%
+  unlist(use.names = FALSE) # select demand variable
+names(s) <- s1 %>%
+  select(m_destinationid) %>%
+  unlist(use.names = FALSE)
+
+print(p) # as numeric vector
+print(s) # as numeric vector
+spai <- spai_3sfca(p, s, D)
+
+print(spai) # data.frame, containing spai for each origin location (p)
 ```
 
 ## References
 
-* [PaperA](doi)
-* [PaperB](doi)
-* [PaperC](doi)
+* [Bauer, J., & Groneberg, D. A. (2016). Measuring Spatial Accessibility of Health Care Providers – Introduction of a Variable Distance Decay Function within the Floating Catchment Area (FCA) Method.](https://doi.org/10.1371/journal.pone.0159148)
+* [Joerg, R., Lenz, N., Wetz, S., & Widmer, M. (2019). Ein Modell zur Analyse der Versorgungsdichte. Herleitung eines Index zur räumlichen Zugänglichkeit mithilfe von GIS und Fallstudie zur ambulanten Grundversorgung in der Schweiz.](https://www.obsan.admin.ch/de/publikationen/ein-modell-zur-analyse-der-versorgungsdichte)
