--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 Floating Catchment Area (FCA) methods to Calculate Spatial Accessibility.
 
-**Text from DESCRIPTION**
+Perform various floating catchment area methods to calculate a spatial accessibility index (SPAI) for demand point data. The distance matrix used for weighting is normalized in a preprocessing step using common functions (gaussian, gravity, exponential or logistic).
 
 ## Installation
 
@@ -38,58 +38,60 @@ And the development version from [GitHub](https://github.com/egrueebler/fca) wit
 # install.packages("devtools")
 devtools::install_github("egrueebler/fca")
 ```
+
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to calculate a SPAI for demand point data using FCA methods.
+
+Create an example population, supply and distances:
 
 ```{r example}
-library(fca)
-## basic example code
-
-p <- data.frame(
-  Origin_ID = letters[1:10],
+# Population df with column for size
+pop <- data.frame(
+  orig_id = letters[1:10],
   size = c(100, 200, 50, 100, 500, 50, 100, 100, 50, 500)
-) # population df with column for size
+)
 
-s <- data.frame(
-  Destination_ID = as.character(1:3),
+# Supply df with column for capacity
+sup <- data.frame(
+  dest_id = as.character(1:3),
   capacity = c(1000, 200, 500)
-) # supply df with column for capacity
+)
 
-D <- matrix(runif(30, min=0, max=30), ncol = 10, nrow = 3, byrow=TRUE, dimnames = list(c(1:3), c(letters[1:10]))) # distance matrix with travel times from 0 to 30
+# Distance matrix with travel times from 0 to 30
+D <- matrix(
+  runif(30, min = 0, max = 30),
+  ncol = 10, nrow = 3, byrow = TRUE,
+  dimnames = list(c(1:3), c(letters[1:10]))
+)
+D
+```
 
-print(D)
+Normalize distance matrix with gaussian function, apply a threshold of 20 minutes (to compute beta for the function) and formatting input data as named vectors for the FCA method (match IDs of distance weight matrix with demand and supply data).
 
-D <- distance_weights(D, d_max=20, imp_function="gaussian", function_d_max = 0.01) # normalize distance matrix with gaussian function and threshold of 20 minutes (to compute beta for function)
+```{r preprocess}
+library(fca)
 
-# Preprocessing Data for FCA method: match IDs of matrix with demand and supply data
-m_originid <- unique(colnames(D))
-m_originid <- as.data.frame(m_originid)
-p1 <- left_join(m_originid, p, by = c("m_originid" = "Origin_ID"))
-p1 <- p1[order(p1$m_originid),] # sort ascending for calculations
-p <- p1 %>% 
-  select(size) %>% 
-  unlist(use.names = FALSE) # select demand variable
-names(p) <- p1 %>%
-  select(m_originid) %>%
-  unlist(use.names = FALSE)
+# Normalize distances
+W <- dist_normalize(
+  D,
+  d_max = 20,
+  imp_function = "gaussian", function_d_max = 0.01
+)
 
-m_destinationid <- unique(rownames(D))
-m_destinationid <- as.data.frame(m_destinationid)
-s1 <- left_join(m_destinationid, s, by = c("m_destinationid" = "Destination_ID"))
-s1 <- s1[order(s1$m_destinationid),] # sort ascending for calculations
-s <- s1 %>% 
-  select(capacity) %>%
-  unlist(use.names = FALSE) # select demand variable
-names(s) <- s1 %>%
-  select(m_destinationid) %>%
-  unlist(use.names = FALSE)
+# Ensure order of ids
+pop <- pop[order(pop$orig_id), ]
+sup <- sup[order(sup$dest_id), ]
 
-print(p) # as numeric vector
-print(s) # as numeric vector
-spai <- spai_3sfca(p, s, D)
+# Named vectors
+(p <- setNames(pop$size, as.character(pop$orig_id)))
+(s <- setNames(sup$capacity, as.character(sup$dest_id)))
+```
 
-print(spai) # data.frame, containing spai for each origin location (p)
+Apply FCA method on formatted input, get SPAI for each origin location (p):
+
+```{r fca}
+(spai <- spai_3sfca(p, s, D))
 ```
 
 ## References
