--- a/README.Rmd
+++ b/README.Rmd
@@ -88,7 +88,7 @@ sup <- sup[order(sup$dest_id), ]
 (s <- setNames(sup$capacity, as.character(sup$dest_id)))
 ```
 
-Apply FCA method on formatted input, get SPAI for each origin location (p):
+Apply FCA method on formatted input, get SPAI for each origin location (`p`):
 
 ```{r fca}
 (spai <- spai_3sfca(p, s, D))
